# routes/index.js
@@ -25,6 +25,7 @@ routes.get('/', (req, res) => {
 routes.use('/',require('./routes-swagger.js'));
 routes.use('/reminders', require('./reminders.js'))
 routes.use('/users', require('./user.js'))
+routes.use('/teams', require('./team.js'))
 
 
 module.exports = routes;
